--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
 	"name": "lutergs-frontend-pwa",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --port=4174",
 		"build": "vite build",
 		"preview": "vite preview",
+		"build and preview": "vite build && vite preview --host",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -33,11 +34,19 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.32.2"
+		"vitest": "^0.32.2",
+		"vite-plugin-pwa": "^0.16.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^3.0.3",
-		"kolorist": "^1.8.0"
+		"@svelteuidev/composables": "^0.14.0",
+		"@svelteuidev/core": "^0.14.0",
+		"@svelteuidev/dates": "^0.14.0",
+		"@svelteuidev/motion": "^0.14.0",
+		"@svelteuidev/prism": "^0.14.0",
+		"dayjs": "^1.11.9",
+		"kolorist": "^1.8.0",
+		"radix-icons-svelte": "^1.2.1"
 	}
 }
