[TEST] 알람 권한 얻게끔 변경 및 iOS 용 앱 이미지 추가

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "lutergs-frontend-pwa",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev --port=4174",
+		"dev": "vite dev --port=4174 --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"build and preview": "vite build && vite preview --host",
