--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.32.2",
-		"vite-plugin-pwa": "^0.16.4"
+		"vite-plugin-pwa": "^0.16.4",
+		"vitest": "^0.32.2"
 	},
 	"type": "module",
 	"dependencies": {
@@ -47,6 +47,7 @@
 		"@svelteuidev/prism": "^0.14.0",
 		"dayjs": "^1.11.9",
 		"kolorist": "^1.8.0",
-		"radix-icons-svelte": "^1.2.1"
+		"radix-icons-svelte": "^1.2.1",
+		"web-push": "^3.6.4"
 	}
 }
