--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"dev": "vite dev --port=4174 --host",
 		"build": "vite build",
 		"preview": "vite preview",
-		"build and preview": "vite build && vite preview --host",
+		"build and preview": "vite build && vite preview --port=4174 --host",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
