--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@svelteuidev/composables": "^0.14.0",
 		"@svelteuidev/core": "^0.14.0",
