--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,10 @@ jobs:
           tags: |
             ${{ steps.login-to-ecr.outputs.registry }}/${{ vars.ECR_REPOSITORY_NAME }}:${{ github.sha }}
             ${{ steps.login-to-ecr.outputs.registry }}/${{ vars.ECR_REPOSITORY_NAME }}:latest
+          build-args: |
+            "BACKEND_SERVER = ${{ secrets.BACKEND_SERVER }}"
+            "PUSH_KEY = ${{ secrets.PUSH_KEY }}"
+            
 
       - name: install kubectl
         id: install-kubectl
