--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
+		"vite": "^4.5.0",
 		"vite-plugin-pwa": "^0.16.4",
 		"vitest": "^0.32.2"
 	},
@@ -45,6 +45,7 @@
 		"@svelteuidev/dates": "^0.14.0",
 		"@svelteuidev/motion": "^0.14.0",
 		"@svelteuidev/prism": "^0.14.0",
+		"@vite-pwa/sveltekit": "^0.2.5",
 		"dayjs": "^1.11.9",
 		"dexie": "^4.0.1-alpha.25",
 		"kolorist": "^1.8.0",
