--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@vite-pwa/sveltekit": "^0.2.7",
 		"dayjs": "^1.11.9",
 		"dexie": "^4.0.1-alpha.25",
+		"dotenv": "^16.3.1",
 		"kolorist": "^1.8.0",
 		"radix-icons-svelte": "^1.2.1",
 		"web-push": "^3.6.4"
